# snips-nlu-parsers

./: .appveyor.yml  .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  README.rst  update_ontology_version.sh  update_version.sh
.github/workflows/: crossenv.yml  crossenv_armv6l.yml  crossenv_armv7l.yml  crossenv_bullseye_aarch64.yml  crossenv_bullseye_armv6l.yml  crossenv_bullseye_armv7l.yml  crossenv_buster_armv6l.yml  crossenv_buster_armv7l.yml
.travis/: before_install.sh  install.sh  test.sh
data/tests/custom_gazetteer_parser/parser_1/: LICENSE  metadata.json  parser
ffi/: Cargo.toml
ffi/ffi-macros/: Cargo.toml
ffi/ffi-macros/src/: builtin_entity_parser.rs  gazetteer_entity_parser.rs  lib.rs  ontology.rs
ffi/src/: lib.rs
python/: MANIFEST.in  README.rst  setup.py  tox.ini
python/ffi/: Cargo.toml
python/ffi/src/: lib.rs
python/snips_nlu_parsers/: __init__.py  builtin_entities.py  builtin_entity_parser.py  gazetteer_entity_parser.py  utils.py
python/snips_nlu_parsers/tests/: test_builtin_entities.py  test_builtin_entity_parser.py  test_gazetteer_entity_parser.py  utils.py
src/: builtin_entity_parser.rs  errors.rs  gazetteer_parser.rs  lib.rs  test_utils.rs  utils.rs
src/builtin_entities/: examples.rs  mod.rs  ontology.rs  parsable.rs  supported_languages.rs
src/conversion/: gazetteer_entities.rs  mod.rs  rustling.rs
