[package]
name = "snips-nlu-parsers"
version = "0.3.0-SNAPSHOT"
authors = ["Adrien Ball <adrien.ball@snips.ai>"]
edition = "2018"

[workspace]
members = [
    ".",
    "ffi",
    "ffi/ffi-macros",
    "python/ffi"
]

[dependencies]
failure = "0.1"
itertools = "0.7"
lazy_static = "1.0"
regex = "0.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
gazetteer-entity-parser = { git = "https://github.com/snipsco/gazetteer-entity-parser", tag = "0.6.0" }
#rustling-ontology = { git = "https://github.com/snipsco/rustling-ontology", tag = "0.18.0" }
rustling-ontology = { path="../rustling-ontology" }
# snips-nlu-ontology = { git = "https://github.com/snipsco/snips-nlu-ontology", tag = "0.64.4" }
snips-nlu-ontology = { path = "../snips-nlu-ontology" }
snips-nlu-utils = { git = "https://github.com/snipsco/snips-nlu-utils", tag = "0.8.0" }

[dev-dependencies]
tempfile = "3.0"
