[package]
name = "snips-nlu-parsers"
version = "0.4.2"
authors = ["Adrien Ball <adrien.ball@snips.ai>"]
edition = "2018"

[workspace]
members = [
    ".",
    "ffi",
    "ffi/ffi-macros",
    "python/ffi"
]

[dependencies]
failure = "0.1"
itertools = "0.8"
lazy_static = "1"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
gazetteer-entity-parser = { git = "https://github.com/snipsco/gazetteer-entity-parser", tag = "0.8.0" }
rustling-ontology = { git = "https://github.com/snipsco/rustling-ontology", tag = "0.19.3" }
snips-nlu-ontology = { git = "https://github.com/snipsco/snips-nlu-ontology", tag = "0.67.1" }
snips-nlu-utils = { git = "https://github.com/snipsco/snips-nlu-utils", tag = "0.9.1" }

[dev-dependencies]
tempfile = "3.0"
