[package]
name = "snips-nlu-parsers-ffi"
version = "0.3.0"
authors = ["Adrien Ball <adrien.ball@snips.ai>"]
edition = "2018"

[dependencies]
failure = "0.1"
ffi-utils = { git = "https://github.com/snipsco/snips-utils-rs", rev = "291ce1d" }
libc = "0.2"
snips-nlu-ontology = { git = "https://github.com/snipsco/snips-nlu-ontology", tag = "0.65.0" }
snips-nlu-ontology-ffi-macros = { git = "https://github.com/snipsco/snips-nlu-ontology", tag = "0.65.0" }
snips-nlu-parsers-ffi-macros = { path = "ffi-macros" }

[lib]
crate-type = ["rlib", "cdylib", "staticlib"]
