[package]
name = "snips-nlu-parsers-ffi-macros"
version = "0.1.0-SNAPSHOT"
authors = ["Adrien Ball <adrien.ball@snips.ai>"]
edition = "2018"

[dependencies]
failure = "0.1"
ffi-utils = { git = "https://github.com/snipsco/snips-utils-rs", rev = "4292ad9" }
libc = "0.2"
serde = "1.0"
serde_json = "1.0"
snips-nlu-ontology = { git = "https://github.com/snipsco/snips-nlu-ontology", tag = "0.62.0" }
snips-nlu-ontology-ffi-macros = { git = "https://github.com/snipsco/snips-nlu-ontology", tag = "0.62.0" }
snips-nlu-parsers = { path = "../.." }

[lib]
crate-type = ["rlib", "cdylib", "staticlib"]
