[package]
name = "snips-nlu-parsers-ffi-macros"
version = "0.3.0-SNAPSHOT"
authors = ["Adrien Ball <adrien.ball@snips.ai>"]
edition = "2018"

[dependencies]
failure = "0.1"
ffi-utils = { git = "https://github.com/snipsco/snips-utils-rs", rev = "291ce1d" }
libc = "0.2"
serde = "1.0"
serde_json = "1.0"
snips-nlu-ontology = { git = "https://github.com/snipsco/snips-nlu-ontology", branch = "master" }
snips-nlu-ontology-ffi-macros = { git = "https://github.com/snipsco/snips-nlu-ontology", branch = "master" }
snips-nlu-parsers = { path = "../.." }

[lib]
crate-type = ["rlib", "cdylib", "staticlib"]
