[package]
name = "snips-nlu-parsers-ffi-macros"
version = "0.4.3"
authors = ["Adrien Ball <adrien.ball@snips.ai>"]
edition = "2018"

[dependencies]
failure = "0.1"
ffi-utils = { git = "https://github.com/snipsco/snips-utils-rs", rev = "291ce1d" }
libc = "0.2"
serde = "1"
serde_json = "1"
snips-nlu-ontology = { git = "https://github.com/snipsco/snips-nlu-ontology", tag = "0.67.1" }
snips-nlu-ontology-ffi-macros = { git = "https://github.com/snipsco/snips-nlu-ontology", tag = "0.67.1" }
snips-nlu-parsers = { path = "../.." }

[lib]
crate-type = ["rlib", "cdylib", "staticlib"]
