[package]
name = "snips-nlu-parsers-python-ffi"
version = "0.2.0-SNAPSHOT"
authors = ["Adrien Ball <adrien.ball@snips.ai>"]
edition = "2018"

[lib]
name = "snips_nlu_parsers_python_ffi"
crate-type = ["cdylib"]

[dependencies]
failure = "0.1"
libc = "0.2"
ffi-utils = { git = "https://github.com/snipsco/snips-utils-rs", rev = "4292ad9" }
snips-nlu-parsers-ffi-macros = { path = "../../ffi/ffi-macros" }
snips-nlu-ontology = { git = "https://github.com/snipsco/snips-nlu-ontology", tag = "0.63.0" }
snips-nlu-ontology-ffi-macros = { git = "https://github.com/snipsco/snips-nlu-ontology", tag = "0.63.0" }
